Serviço simplificado de gestão de ativos industriais.

--- a/viridis-webservice/src/main/resources/application.properties
+++ b/viridis-webservice/src/main/resources/application.properties
@@ -1,16 +1,17 @@
-#URL BASE UTILIZANDO O NOME DO APP
-url-base = viridis
-
 #PORTA ONDE VAI SER EXECUTADO O TOMCAT
 server.port = 9444
 
 #INFORMA«’ES PARA CONEX√ÉO COM O BANCO DE DADOS POSTGRESQL
 spring.datasource.url=jdbc:postgresql://localhost:5433/viridis
 spring.datasource.username=postgres
-spring.datasource.password=admin
+spring.datasource.password=copernia2018
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.generate-ddl=true
 spring.jackson.serialization.fail-on-empty-beans=false
+
+# SLF4J LOGGING PARA ARQUIVO
+logging.pattern.file= "%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n"
+logging.file= D:/application.log
 
 #PARA SER USADO APENAS EM AMBIENTE DE TESTES
 !spring.jpa.properties.hibernate.show_sql=false
