Correções de bugs.

--- a/viridis-webservice/src/main/resources/application.properties
+++ b/viridis-webservice/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.port = 9444
 #INFORMA«’ES PARA CONEX√ÉO COM O BANCO DE DADOS POSTGRESQL
 spring.datasource.url=jdbc:postgresql://localhost:5433/viridis
 spring.datasource.username=postgres
-spring.datasource.password=copernia2018
+spring.datasource.password=admin
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.generate-ddl=true
 spring.jackson.serialization.fail-on-empty-beans=false
