--- a/viridis-webservice/pom.xml
+++ b/viridis-webservice/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>br.com.viridis</groupId>
 	<artifactId>viridis-webservice</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<packaging>jar</packaging>
 
 	<name>viridis-webservice</name>
